Used observablefields with the GUI.